--- a/styles/module.css
+++ b/styles/module.css
@@ -30,9 +30,9 @@ h2 {
   color: white;
   background-color: #222;
   position: relative;
-  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -webkit-box-shadow: 1px 3px 5px 1px #0000000d;
+  box-shadow: 1px 3px 5px 1px #0000000d;
+  -moz-box-shadow: 1px 3px 5px 1px #0000000d;
 }
 .header__title {
   font-family: "Raleway", sans-serif;
@@ -183,6 +183,17 @@ h2 {
   border-radius: 5px;
 }
 
+.project__title-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  transition: 0.6s;
+}
+
 .project__item-container {
   position: relative;
   width: 100%;
@@ -228,17 +239,6 @@ h2 {
 }
 .project__description p {
   font-size: 1.5rem;
-}
-
-.project__title-container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  bottom: 0;
-  transition: 0.6s;
 }
 
 .project__title-container h2 {
