--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -11,3 +11,9 @@ $inputs: #2e2f2f;
   box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
   -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
 }
+
+@mixin lightShadow() {
+  -webkit-box-shadow: 1px 3px 5px 1px #0000000d;
+  box-shadow: 1px 3px 5px 1px #0000000d;
+  -moz-box-shadow: 1px 3px 5px 1px #0000000d;
+}
