--- a/styles/module.css
+++ b/styles/module.css
@@ -163,8 +163,11 @@ h2 {
 }
 .projects__item-visuals {
   width: 100%;
+  height: 165px;
   position: relative;
   display: flex;
+  max-width: 420px;
+  margin: 0 auto;
 }
 .projects__item-visuals h3 {
   position: absolute;
@@ -180,6 +183,7 @@ h2 {
 }
 .projects__item-visuals img {
   width: 100%;
+  object-fit: cover;
 }
 .projects__item-visuals-tools {
   position: absolute;
@@ -188,23 +192,70 @@ h2 {
   background-color: #00000075;
   opacity: 0;
   transition: 0.4s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .projects__item-visuals-tools h4 {
   text-align: center;
+  padding-bottom: 8px;
+  font-size: 1.7rem;
 }
 .projects__item-visuals-tools ul {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   width: 90%;
   margin: 0 auto;
 }
+.projects__item-visuals-tools li {
+  padding-bottom: 5px;
+}
 .projects__item-visuals ul {
   list-style: none;
+}
+.projects__item-description {
+  max-width: 420px;
+  margin: 0 auto;
+  line-height: 2.3rem;
+  margin-top: 5px;
 }
 .projects__item-visuals:hover h3 {
   opacity: 0;
 }
 .projects .projects__item-visuals:hover .projects__item-visuals-tools {
   opacity: 1;
+}
+
+.projects__item-description-buttons {
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
+}
+.projects__item-description-buttons a {
+  border: 1px solid rgba(255, 255, 255, 0.411);
+  font-weight: 300;
+  padding: 10px 20px;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  transition: 0.2s;
+  font-size: 1.3rem;
+  width: 48%;
+}
+.projects__item-description-buttons a:hover {
+  border: 1px solid transparent;
+  background-color: #fb7c3c40;
+  color: #fb7c3c;
+}
+
+.visit__GH {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.visit__GH a {
+  color: #fb7c3c;
+  text-decoration: none;
+  font-size: 1.8rem;
 }
 
 /* .projects {
