--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -4,8 +4,11 @@
   padding: 25px;
   &__item-visuals {
     width: 100%;
+    height: 165px;
     position: relative;
     display: flex;
+    max-width: 420px;
+    margin: 0 auto;
     h3 {
       position: absolute;
       width: 100%;
@@ -21,6 +24,7 @@
 
     img {
       width: 100%;
+      object-fit: cover;
     }
 
     &-tools {
@@ -30,19 +34,35 @@
       background-color: #00000075;
       opacity: 0;
       transition: 0.4s;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       h4 {
         text-align: center;
+        padding-bottom: 8px;
+        font-size: 1.7rem;
       }
       ul {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         width: 90%;
         margin: 0 auto;
+      }
+
+      li {
+        padding-bottom: 5px;
       }
     }
 
     ul {
       list-style: none;
     }
+  }
+
+  &__item-description {
+    max-width: 420px;
+    margin: 0 auto;
+    line-height: 2.3rem;
+    margin-top: 5px;
   }
 
   &__item-visuals:hover {
@@ -53,6 +73,42 @@
   .projects__item-visuals:hover .projects__item-visuals-tools {
     opacity: 1;
   }
+}
+
+.projects {
+  &__item-description-buttons {
+    margin: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    a {
+      border: 1px solid rgba(255, 255, 255, 0.411);
+      font-weight: 300;
+      padding: 10px 20px;
+      color: white;
+      text-decoration: none;
+      text-align: center;
+      transition: 0.2s;
+      font-size: 1.3rem;
+      width: 48%;
+    }
+
+    a:hover {
+      border: 1px solid transparent;
+      background-color: #fb7c3c40;
+      color: $selection;
+    }
+  }
+}
+
+.visit__GH {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.visit__GH a {
+  color: $selection;
+  text-decoration: none;
+  font-size: 1.8rem;
 }
 
 /* .projects {
