--- a/styles/breakpoints/tablet.css
+++ b/styles/breakpoints/tablet.css
@@ -26,7 +26,7 @@
   top: -100vh;
   height: 100vh;
   display: grid;
-  grid-template-rows: 210px 1fr 65px;
+  grid-template-rows: 0.4fr 0.8fr 0.5fr;
   padding: 0;
   background-color: #f7f7f7;
 }
@@ -105,19 +105,19 @@
 }
 .header__closer {
   display: flex;
-  color: black;
   justify-content: center;
+  align-items: center;
 }
 .header__closer div {
   border: 2px solid #fc5c57;
   color: #fc5c57;
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 100px;
-  font-size: 2.2rem;
+  font-size: 3rem;
 }
 
 .activate__header {
@@ -125,9 +125,7 @@
 }
 
 .header__image--bg {
-  position: absolute;
-  height: 210px;
-  object-fit: cover;
+  display: none;
 }
 
 /*# sourceMappingURL=tablet.css.map */
