--- a/styles/breakpoints/tablet.scss
+++ b/styles/breakpoints/tablet.scss
@@ -28,7 +28,8 @@
   top: -100vh;
   height: 100vh;
   display: grid;
-  grid-template-rows: 210px 1fr 65px;
+  // grid-template-rows: 210px 1.5fr 1fr;
+  grid-template-rows: 0.4fr 0.8fr 0.5fr;
   padding: 0;
   background-color: #f7f7f7;
 
@@ -116,19 +117,18 @@
 
   &__closer {
     display: flex;
-    color: black;
     justify-content: center;
-
+    align-items: center;
     div {
       border: 2px solid $main;
       color: $main;
-      width: 50px;
-      height: 50px;
+      width: 70px;
+      height: 70px;
       display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 100px;
-      font-size: 2.2rem;
+      font-size: 3rem;
     }
   }
 }
@@ -138,7 +138,5 @@
 }
 
 .header__image--bg {
-  position: absolute;
-  height: 210px;
-  object-fit: cover;
+  display: none;
 }
